Bug 1369594 - Get module information for BHR off main thread, r=froydnj

MozReview-Commit-ID: L0ANHNKKAkY