toolkit/components/telemetry/Telemetry.cpp
@@ -413,7 +413,7 @@ public:
 #if defined(MOZ_GECKO_PROFILER)
   static void DoStackCapture(const nsACString& aKey);
 #endif
-  static void RecordThreadHangStats(Telemetry::ThreadHangStats& aStats);
+  static void RecordThreadHangStats(Telemetry::ThreadHangStats&& aStats);
   size_t SizeOfIncludingThis(mozilla::MallocSizeOf aMallocSizeOf);
   struct Stat {
     uint32_t hitCount;
@@ -1479,11 +1479,6 @@ CreateJSThreadHangStats(JSContext* cx, const Telemetry::ThreadHangStats& thread)
     return nullptr;
   }
 
-  // Create a CombinedStacks instance which will contain all of the stacks
-  // collected by the BHR. Specify a custom maxStacksCount to ensure that all of
-  // our native hang stacks fit.
-  CombinedStacks combinedStacks(Telemetry::kMaximumNativeHangStacks);
-
   // Process the hangs into a hangs object.
   JS::RootedObject hangs(cx, JS_NewArrayObject(cx, 0));
   if (!hangs) {
@@ -1495,13 +1490,9 @@ CreateJSThreadHangStats(JSContext* cx, const Telemetry::ThreadHangStats& thread)
       return nullptr;
     }
 
-    // Check if we have a native stack, and if we do, add it to combinedStacks,
-    // and store its index in the 'nativeStack' member of the hang object.
-    const Telemetry::NativeHangStack& stack = thread.mHangs[i].GetNativeStack();
-    if (!stack.empty() &&
-        combinedStacks.GetStackCount() < Telemetry::kMaximumNativeHangStacks) {
-      Telemetry::ProcessedStack processed = Telemetry::GetStackAndModules(stack);
-      uint32_t index = combinedStacks.AddStack(processed);
+    // Check if we have a cached native stack index, and if we do record it.
+    uint32_t index = thread.mHangs[i].GetNativeStackIndex();
+    if (index != Telemetry::HangHistogram::NO_NATIVE_STACK_INDEX) {
       if (!JS_DefineProperty(cx, obj, "nativeStack", index, JSPROP_ENUMERATE)) {
         return nullptr;
       }
@@ -1515,7 +1506,9 @@ CreateJSThreadHangStats(JSContext* cx, const Telemetry::ThreadHangStats& thread)
     return nullptr;
   }
 
-  JS::RootedObject fullReportObj(cx, CreateJSStackObject(cx, combinedStacks));
+  // We should already have a CombinedStacks object on the ThreadHangStats, so
+  // add that one.
+  JS::RootedObject fullReportObj(cx, CreateJSStackObject(cx, thread.mCombinedStacks));
   if (!fullReportObj) {
     return nullptr;
   }
@@ -2095,7 +2088,7 @@ TelemetryImpl::CaptureStack(const nsACString& aKey) {
 }
 
 void
-TelemetryImpl::RecordThreadHangStats(Telemetry::ThreadHangStats& aStats)
+TelemetryImpl::RecordThreadHangStats(Telemetry::ThreadHangStats&& aStats)
 {
   if (!sTelemetry || !TelemetryHistogram::CanRecordExtended())
     return;
@@ -2791,9 +2784,9 @@ void CaptureStack(const nsACString& aKey)
 }
 #endif
 
-void RecordThreadHangStats(ThreadHangStats& aStats)
+void RecordThreadHangStats(ThreadHangStats&& aStats)
 {
-  TelemetryImpl::RecordThreadHangStats(aStats);
+  TelemetryImpl::RecordThreadHangStats(Move(aStats));
 }
 
 
